--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ map.relayout();
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/g1.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/Couple.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -565,7 +565,7 @@ map.relayout();
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/g8.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/Couple2.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -595,7 +595,7 @@ map.relayout();
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/g3.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/Couple3.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -625,7 +625,7 @@ map.relayout();
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/g4.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/Couple.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -655,7 +655,7 @@ map.relayout();
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/g5.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/Couple2.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -679,132 +679,6 @@ map.relayout();
                             </div><!--END of PHOTO-ITEM-->
                         </div><!--END of GALLERY-ITEM-5-->
 
-                        <!--GALLERY-ITEM-6-->
-                        <div class="col-md-4">
-                            <!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation fadeIn">
-
-                             	<!--PHOTO-->
-                               	<img src="./images/g6.jpg" alt="" class="hover-animation image-zoom-rotate">
-
-                               	<!--PHOTO OVERLAY-->
-                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                            	</div><!--END of PHOTO OVERLAY-->
-
-                                <!--ICON LINK-->
-                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                                    <div class="alignment">
-                                    	<div class="v-align center-middle">
-
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '허허 저것 좀 보세요');" href="./images/g6.jpg" class="magnific-zoom-gallery" title="허허 저것 좀 보세요">
-        										<div class="de-icon circle light medium-size inline">
-            										<i class="de-icon-zoom-in"></i>
-            									</div>
-        									</a>
-
-                                      	</div>
-                                    </div>
-                                </div><!--END of ICON LINK-->
-
-                            </div><!--END of PHOTO-ITEM-->
-                        </div><!--END of GALLERY-ITEM-6-->
-
-                        <!--GALLERY-ITEM-7-->
-                        <div class="col-md-4">
-                            <!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation fadeIn">
-
-                             	<!--PHOTO-->
-                               	<img src="./images/g7.jpg" alt="" class="hover-animation image-zoom-rotate">
-
-                               	<!--PHOTO OVERLAY-->
-                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                            	</div><!--END of PHOTO OVERLAY-->
-
-                                <!--ICON LINK-->
-                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                                    <div class="alignment">
-                                    	<div class="v-align center-middle">
-
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '신부가 예쁘다');" href="./images/g7.jpg" class="magnific-zoom-gallery" title="신부가 예쁘다">
-        										<div class="de-icon circle light medium-size inline">
-            										<i class="de-icon-zoom-in"></i>
-            									</div>
-        									</a>
-
-                                      	</div>
-                                    </div>
-                                </div><!--END of ICON LINK-->
-
-                            </div><!--END of PHOTO-ITEM-->
-                        </div><!--END of GALLERY-ITEM-7-->
-
-                        <!--GALLERY-ITEM-8-->
-                        <div class="col-md-4">
-                            <!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation fadeIn">
-
-                             	<!--PHOTO-->
-                               	<img src="./images/g2.jpg" alt="" class="hover-animation image-zoom-rotate">
-
-                               	<!--PHOTO OVERLAY-->
-                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                            	</div><!--END of PHOTO OVERLAY-->
-
-                                <!--ICON LINK-->
-                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                                    <div class="alignment">
-                                    	<div class="v-align center-middle">
-
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '너무나 아름다운');" href="./images/g2.jpg" class="magnific-zoom-gallery" title="너무나 아름다운">
-        										<div class="de-icon circle light medium-size inline">
-            										<i class="de-icon-zoom-in"></i>
-            									</div>
-        									</a>
-
-                                      	</div>
-                                    </div>
-                                </div><!--END of ICON LINK-->
-
-                            </div><!--END of PHOTO-ITEM-->
-                        </div><!--END of GALLERY-ITEM-8-->
-
-                        <!--GALLERY-ITEM-9-->
-                        <div class="col-md-4">
-                            <!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation fadeIn">
-
-                             	<!--PHOTO-->
-                               	<img src="./images/g9.jpg" alt="" class="hover-animation image-zoom-rotate">
-
-                               	<!--PHOTO OVERLAY-->
-                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                            	</div><!--END of PHOTO OVERLAY-->
-
-                                <!--ICON LINK-->
-                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                                    <div class="alignment">
-                                    	<div class="v-align center-middle">
-
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '긴 하루의 끝');" href="./images/g9.jpg" class="magnific-zoom-gallery" title="긴 하루의 끝">
-        										<div class="de-icon circle light medium-size inline">
-            										<i class="de-icon-zoom-in"></i>
-            									</div>
-        									</a>
-
-                                      	</div>
-                                    </div>
-                                </div><!--END of ICON LINK-->
-
-                            </div><!--END of PHOTO-ITEM-->
-                        </div><!--END of GALLERY-ITEM-9-->
-
-                   </div>
-        		</div>
-        	</section>
-
-
-
 
             <!-- RSVP SECTION -->
             <section id="rsvp-section">
@@ -821,10 +695,6 @@ map.relayout();
                         		<h2>
                             		고맙습니다.
                             	</h2>
-
-                            	<p>
-                            		<a onclick="ga('send', 'event', '페이스북 이벤트 페이지', '링크 클릭');" target="_blank" href="https://www.facebook.com/events/153683578462761/" style="text-decoration: underline;color:#37A4FF;">페이스북 이벤트에 댓글 달기</a>
-                            	</p>
 
                           	</div>
                         </div>
@@ -843,7 +713,7 @@ map.relayout();
 
         <!-- FOOTER SECTION -->
             <footer>
-            	<div class="image-divider fixed-height" style="background-image:url(./images/thankyou.jpg);" data-stellar-background-ratio="0.5" >
+            	<div class="image-divider fixed-height" style="background-image:url(./images/YS_Jung.jpg);" data-stellar-background-ratio="0.5" >
 
                 	<div class="divider-overlay"></div>
 
@@ -870,7 +740,7 @@ map.relayout();
                         				</div>
 
 										<div id="footer-couple-name" class="animation delay1 fadeInUp">
-                                			한별 & 성섭
+                                			이슬 & 영섭
                                 		</div>
 
                      				</div>
