--- a/index.html
+++ b/index.html
@@ -752,5 +752,73 @@ map.relayout();
 
                 </div>
             </footer>
+
+		<!-- jQuery -->
+    	<!-- <script src="js/jquery-1.11.1.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+				<!-- Pace -->
+        <script src="js/pace/pace.min.js"></script>
+    	<!-- Bootstrap -->
+    	<script src="js/bootstrap/bootstrap.js"></script>
+        <!-- Modernizr -->
+        <script src="js/modernizr/modernizr.js"></script>
+        <!-- Device JS -->
+        <script src="js/devicejs/device.js"></script>
+        <!-- TinyNav -->
+        <script src="js/tinynav/tinynav.min.js"></script>
+        <!-- SmoothScroll -->
+        <script src="js/smoothscroll/jquery.smooth-scroll.js"></script>
+        <!-- Flexslider -->
+        <script src="js/flexslider/jquery.flexslider.js"></script>
+        <!-- Sticky -->
+        <script src="js/sticky/jquery.sticky.js"></script>
+        <!-- Waypoint -->
+        <script src="js/waypoint/jquery.waypoints.min.js"></script>
+        <!-- DoubleTapToGo -->
+        <script src="js/jquery-ui-widget/jquery.ui.widget.js"></script>
+        <script src="js/jquery-doubletaptogo/jquery.dcd.doubletaptogo.js"></script>
+        <!-- Vide -->
+        <script src="js/vide/jquery.vide.js"></script>
+        <!-- Stellar -->
+        <script src="js/stellar/jquery.stellar.js"></script>
+        <!-- Masonry -->
+        <script src="js/masonry/masonry.pkgd.min.js"></script>
+        <!-- Countdown -->
+        <script src="js/countdown/jquery.plugin.js"></script>
+        <script src="js/countdown/jquery.countdown.js"></script>
+        <!-- Magnific Popup -->
+        <script src="js/magnific-popup/jquery.magnific-popup.js"></script>
+        <!-- Owl Carousel -->
+        <script src="js/owlcarousel/owl.carousel.js"></script>
+        <!-- Google Map -->
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXWJbesu0SUgeQNwr5m89w2ZTw4cuWOtU"></script> -->
+        <!-- <script src="js/markerlabel/markerwithlabel.js"></script> -->
+        <!-- RSVP -->
+        <!-- <script src="js/rsvp/rsvp.js"></script> -->
+
+        <!-- Custom Core Script -->
+        <script type="text/javascript" src="js/script.js"></script>
+        <!-- <script type="text/javascript" src="js/map-script.js"></script> -->
+        <!-- Custom Additional Script -->
+        <script type="text/javascript" src="js/main-slider-fade.js"></script>
+
+				<script>
+				  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+				  ga('create', 'UA-90723635-1', 'auto');
+				  ga('send', 'pageview');
+
+				</script>
+
+				<script src="js/jquery.scrolldepth.min.js"></script>
+<script>
+jQuery(function() {
+  jQuery.scrollDepth();
+});
+</script>
+
 	</body>
 </html>
