--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                     </div>
                                     <div id="banner-date">
                                     	- 2021.09.04 오후 5시 -</br>
-																			엘블리스 웨딩홀
+																			엘블레스 웨딩홀
                                     </div>
 
 								</div>
@@ -132,7 +132,7 @@
                         	<a href="index.html">
                     			<div class="css-logo rounded">
                    					<div class="css-logo-text">
-                        				<strong>H</strong><i class="de-icon-heart-1"></i><strong>S</strong>
+                        				<strong>YS</strong><i class="de-icon-heart-1"></i><strong>YS</strong>
                     				</div>
                     			</div>
                        		</a>
@@ -286,7 +286,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '두번째 데이트');"  href="./images/ourstory1.jpg" class="magnific-zoom" title="두번째 데이트">
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '데이트');"  href="./images/Couple2.jpg" class="magnific-zoom" title="데이트">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -302,8 +302,8 @@
                         <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                         	<div class="arrow-left"></div>
                             <div class="story-date">
-                            	<div class="date-only">06</div>
-                                <div class="month-year">2014</div>
+                            	<div class="date-only">09</div>
+                                <div class="month-year">2021</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>
@@ -383,7 +383,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-4">
-                                        	<h3>엘블리스 웨딩홀</h3>
+                                        	<h3>엘블레스 웨딩홀</h3>
                                         </div>
 
                                   </div>
@@ -456,38 +456,31 @@ map.relayout();
 
                             <h3 class="inline">오시는 길</h3>
 
-                            	<ul><li>(140-750) 서울특별시 영등포구 가마산로 540 ( 신길7동 101-1번지)</li>
-                            	<li>TEL 02.841.4114</li>
-                            	<li>FAX: 02.842.2646</li></ul>
+                            	<ul><li>서울특별시 서초구 강남대로 213번지 (스포타임 지하1층)</li>
+                            	<li>TEL 02.526.0300</li>
 
 
 
                        		<div class="de-icon circle small-size inline" style="background-color:#f6700e">
                             	<i class="de-icon-truck"></i>
                             </div>
-                            <h3 class="inline">무료 셔틀버스</h3>
+                            <h3 class="inline">버스</h3>
 														<ul>
-														<li>1호선 대방역3번출구 / 7호선 보라매역 5번출구로 나오셔서 셔틀버스를 타시면됩니다.</li>
-														<li>결혼식 있을때만 운행하며, 예식시간 1시간30분 전부터 10분-15분간격 운행합니다.</li></ul>
+														<li>양재역, 서초문화예술회관에서 하차</li>
 
 							<div class="de-icon circle small-size inline" style="background-color:#0d9a48">
                             	<i class="de-icon-rebel"></i>
                             </div>
                             <h3 class="inline">지하철</h3>
                             <ul>
-                            	<li>1호선: 대방역 4,5번 출구에서 100m 지점 김재규경찰학원앞 마을버스 (07번 06번) 이용</li>
-                            	<li>7호선: 보라매역 - 도보이용 (500m), 택시이용 -8번출구 (기본요금)</li>
-                            	<li>도보: 5번출구에서 200m 지나 우신시장 삼거리에서 우회전, 300m직진</li>
+                            	<li>3호선양재역/신분당선 양재역 - 9번출구</li>
                             </ul>
 														<div class="de-icon circle small-size inline" style="background-color:#9400d3">
 							                            	<i class="de-icon-cab"></i>
 							                            </div>
 							                            <h3 class="inline">승용차</h3>
 							                            <ul>
-							                            	<li>시흥대로 방면에서 오시는 경우: 강남중학교 앞 사거리에서 좌회전이 안되므로 서울지방 병무청앞에서 유(u)턴을 해서 70m지나 사거리에 이정표(신풍시장) 방면으로 우회전 - 직진- 지하차도 통과 하지마시고 옆길(3차선)을 이용하여 올라옴</li>
-							                            	<li>강남중학교/신풍시장(사러가쇼핑)에서 오시는 경우: 해군호텔 앞 지하차도를 통과하지 마시고 지하차도 옆길(3차선)을 이용하여 올라오시면 됨</li>
-							                            	<li>경부고속도로 이용시: 한남 IC 김포공항방향 직진 - 여의도 진입 - 원효대교 밑 좌회전- 대방로 직진( 지하차도 통과후 1.2km) - 옛해군 본부 앞 사거리에서 (신풍시장)우회전</li>
-																						<li>중부고속도로 이용시: 상일 IC - 김포공항방향 직진- 여의도 진입후 상기 동일코스로 이동</li>
+							                            	<li>서초IC에서 양재역 방면으로 나오신후 양재지하차도로 진입하지 말고 양재역사거리에서 성남방향으로 우회전합니다. 우회전후 60m 직진하시면 우측에 엘블레스가 있습니다.</li>
 							                            </ul>
                         </div>
 
@@ -546,7 +539,7 @@ map.relayout();
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '클릭해주셔서 고맙습니다');" href="./images/g1.jpg" class="magnific-zoom-gallery" title="클릭해주셔서 고맙습니다.">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '클릭해주셔서 고맙습니다');" href="./images/Couple.jpg" class="magnific-zoom-gallery" title="클릭해주셔서 고맙습니다.">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -576,7 +569,7 @@ map.relayout();
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '집에서 가져간 안경');" href="./images/g8.jpg" class="magnific-zoom-gallery" title="집에서 가져간 안경">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '사진2');" href="./images/Couple2.jpg" class="magnific-zoom-gallery" title="사진2">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -606,7 +599,7 @@ map.relayout();
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', 'i love you');" href="./images/g3.jpg" class="magnific-zoom-gallery" title="I Love You를 뜻합니다.">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', 'i love you');" href="./images/Couple3.jpg" class="magnific-zoom-gallery" title="I Love You">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -636,7 +629,7 @@ map.relayout();
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '앉아있기 불편함');" href="./images/g4.jpg" class="magnific-zoom-gallery" title="앉아있기 불편함">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '재탕사진');" href="./images/Couple.jpg" class="magnific-zoom-gallery" title="재탕사진">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -666,7 +659,7 @@ map.relayout();
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '봐도봐도 좋은');" href="./images/g5.jpg" class="magnific-zoom-gallery" title="봐도봐도 좋은">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '재탕사진2');" href="./images/Couple2.jpg" class="magnific-zoom-gallery" title="재탕사진2">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
