--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                         </div>
                    </div> <!-- END of ROW-2 -->
 
-<div align='center'>
+<div class='col-xs-12'>
   <div class='calendar'>
     <div class='month'>2021年 9月</div>
     <div>
@@ -458,6 +458,7 @@ map.relayout();
 
                             	<ul><li>서울특별시 서초구 강남대로 213번지 (스포타임 지하1층)</li>
                             	<li>TEL 02.526.0300</li>
+								</ul>
 
 
 
@@ -467,6 +468,7 @@ map.relayout();
                             <h3 class="inline">버스</h3>
 														<ul>
 														<li>양재역, 서초문화예술회관에서 하차</li>
+								</ul>
 
 							<div class="de-icon circle small-size inline" style="background-color:#0d9a48">
                             	<i class="de-icon-rebel"></i>
