--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
      	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
      	<meta name="description" content="">
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
 	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
@@ -33,6 +34,20 @@
         <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
+  <style>
+	/*구글 웹 폰트 적용*/
+	@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300&display=swap');
+
+	.NS-font{
+    	font-family: 'Noto Serif KR', serif;
+	}
+  </style>
+ </head>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap');
+	.SF-font{
+		font-family: 'Sunflower', sans-serif;
+</style>
         <!-- Theme CSS -->
     	<link href="css/style.css" rel="stylesheet" media="screen">
 
@@ -89,11 +104,11 @@
                                     	You're Invited
                                     </div>
                                     <div class="banner-text withlove medium light">
-                                    	<h1>이슬 영섭 결혼합니다.</h1>
+                                    	<h1 class="SF-font">이슬 영섭 결혼합니다.</h1>
                                     </div>
                                     <div id="banner-date">
-                                    	- 2021.09.04 오후 5시 -</br>
-																			엘블레스 웨딩홀
+                                    	- 2021.09.04 오후 5시 -</br> 
+										엘블레스 웨딩홀
                                     </div>
 
 								</div>
@@ -111,7 +126,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="max-width=100%; height=auto; background-image:url(./images/Couple.jpg); background-position:top center">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
@@ -202,7 +217,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">김영섭</h2>
+                        		<h2 class="SF-font text-center">김영섭</h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
