--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="max-width=100%; height=auto; background-image:url(./images/Couple.jpg); background-position:top center">
+                	<div data-stellar-ratio="0.5" class="slide-image box box4" style="max-width=5%; height=auto; background-image:url(./images/Couple.jpg); background-position:top center">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
