--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-     	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+     	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
      	<meta name="description" content="">
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
 	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
@@ -126,7 +125,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image box box4" style="max-width=5%; height=auto; background-image:url(./images/Couple.jpg); background-position:top center">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:auto">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
