--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="width:400px; height:auto; background-image:url(./images/Couple.jpg); background-position:top center; background-size:auto">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:contain">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
