--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider">
+    	<section id="main-slider" class="flexslider fullscreen">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
@@ -99,7 +99,7 @@
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
 
-                                    <div id="invited" align="center">
+                                    <div id="invited">
                                     	You're Invited
                                     </div>
                                     <div class="banner-text withlove medium light">
