--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                     	<div class="container">
                         	<div class="row">
-                        		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
+                        		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp" align="center">
 
                                     <div id="invited">
                                     	You're Invited
