--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 				<div class="slide-title-inner-wrapper">
 
                     <!-- TITLE 2 -->
-					<div class="slide-title">
+					<div class="slide-title" align="center">
 
                     	<div class="container">
                         	<div class="row">
-                        		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp" align="center">
+                        		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
 
                                     <div id="invited">
                                     	You're Invited
