--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:contain">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
@@ -413,7 +413,7 @@
     <div>
       <table class='table day'>
         <tr><td style='color:#808080'>일</td><td>월</td><td>화</td><td>수</td><td>목</td><td>금</td><td style="color:#808080">토</td></tr>
-        <tr><td></td><td></td><td></td><td>1</td><td>2</td><td>3</td><td class='d-day' style='background-color:red'>4</td></tr>
+        <tr><td></td><td></td><td></td><td>1</td><td>2</td><td>3</td><td class='d-day' style='background-color:red; text-align:center'>4</td></tr>
         <tr><td style="color:#808080">5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td style="color:#808080">11</td></tr>
         <tr><td style="color:#808080">12</td><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td style="color:#808080">18</td></tr>
         <tr><td style="color:#808080">19</td><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td><td style="color:#808080">25</td></tr>
