--- a/index.html
+++ b/index.html
@@ -702,6 +702,12 @@ map.relayout();
                         		<h2>
                             		고맙습니다.
                             	</h2>
+								<h1>모바일기능</h1>
+<h2>모바일에서 전화걸기</h2>
+<p><a href="tel:01046689925">전화걸기</a>
+
+<h2>모바일에서 문자보내기</h2>
+<p><a href="sms:01046689925">문자보내기</a></p>
 
                           	</div>
                         </div>
