--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">정이슬</h2>
+                        		<h2 class="SF-font text-center">정이슬</h2>
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
@@ -704,10 +704,10 @@ map.relayout();
                             	</h2>
 								<h1>모바일기능</h1>
 <h2>모바일에서 전화걸기</h2>
-<p><a href="tel:01046689925">전화걸기</a>
+<p><a href="tel:01034472936">전화걸기</a>
 
 <h2>모바일에서 문자보내기</h2>
-<p><a href="sms:01046689925">문자보내기</a></p>
+<p><a href="sms:01034472936">문자보내기</a></p>
 
                           	</div>
                         </div>
@@ -821,7 +821,7 @@ map.relayout();
 				  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 				  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-				  ga('create', 'UA-90723635-1', 'auto');
+				  ga('create', 'G-G7KD3G9SFW', 'auto');
 				  ga('send', 'pageview');
 
 				</script>
