--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@ map.relayout();
 				  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 				  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-				  ga('create', 'G-G7KD3G9SFW', 'auto');
+				  ga('create', 'UA-201770841-2', 'auto');
 				  ga('send', 'pageview');
 
 				</script>
