--- a/index.html
+++ b/index.html
@@ -412,12 +412,12 @@
     <div class='month'>2021년 9월</div>
     <div>
       <table class='table day'>
-        <tr><td style='color:#808080'>일</td><td>월</td><td>화</td><td>수</td><td>목</td><td>금</td><td style="color:#808080">토</td></tr>
-        <tr><td></td><td></td><td></td><td>1</td><td>2</td><td>3</td><td class='d-day' style='background-color:red; text-align:center'>4</td></tr>
-        <tr><td style="color:#808080">5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td style="color:#808080">11</td></tr>
-        <tr><td style="color:#808080">12</td><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td style="color:#808080">18</td></tr>
-        <tr><td style="color:#808080">19</td><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td><td style="color:#808080">25</td></tr>
-        <tr><td style="color:#808080">26</td><td>27</td><td>28</td><td>29</td><td>30</td><td></td><td></td></tr>
+        <tr><td style='color:#ff0000; text-align:center'>일</td><td style="text-align:center">월</td><td style="text-align:center">화</td><td style="text-align:center">수</td><td style="text-align:center">목</td><td style="text-align:center">금</td><td style="color:#ff0000; text-align:center">토</td></tr>
+        <tr><td></td><td></td><td></td><td style="text-align:center">1</td><td style="text-align:center">2</td><td style="text-align:center">3</td><td style='background-color:rgba(255, 0, 0, 0.4); text-align:center'>4</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">5</td><td style="text-align:center">6</td><td style="text-align:center">7</td><td style="text-align:center">8</td><td style="text-align:center">9</td><td style="text-align:center">10</td><td style="color:#ff0000; text-align:center">11</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">12</td><td style="text-align:center">13</td><td style="text-align:center">14</td><td style="text-align:center">15</td><td style="text-align:center">16</td><td style="text-align:center">17</td><td style="color:#ff0000; text-align:center">18</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">19</td><td style="text-align:center">20</td><td style="text-align:center">21</td><td style="text-align:center">22</td><td style="text-align:center">23</td><td style="text-align:center">24</td><td style="color:#ff0000; text-align:center">25</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">26</td><td style="text-align:center">27</td><td style="text-align:center">28</td><td style="text-align:center">29</td><td style="text-align:center">30</td><td></td><td></td></tr>
       </table>
     </div>
   </div>
