--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider fullscreen">
+    	<section id="main-slider" class="flexslider contain">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
@@ -93,13 +93,13 @@
 				<div class="slide-title-inner-wrapper">
 
                     <!-- TITLE 2 -->
-					<div class="slide-title" align="center">
+					<div class="slide-title text-center">
 
                     	<div class="container">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
 
-                                    <div id="invited">
+                                    <div id="invited" class="text-center">
                                     	You're Invited
                                     </div>
                                     <div class="banner-text withlove medium light">
