--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider contain">
+    	<section id="main-slider" class="flexslider">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
