--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <!-- MAIN SLIDER IMAGES -->
 
-  			<ul class="slides">
+  			<ul class="slides contain">
     			<li>
                 	<!-- SLIDE IMAGE -->
                 	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
