--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider">
+    	<section id="main-slider" class="flexslider fullscreen">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
@@ -122,7 +122,7 @@
 
             <!-- MAIN SLIDER IMAGES -->
 
-  			<ul class="slides contain">
+  			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
                 	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
