--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider overlay-Section">
+    	<section id="main-slider" class="flexslider image-divider fixed-height">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
