--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider fullscreen">
+    	<section id="main-slider" class="flexslider fixed-height">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
