--- a/index.html
+++ b/index.html
@@ -707,18 +707,18 @@ map.relayout();
 
 <h2>모바일에서 문자보내기</h2>
 <p><a href="sms:01034472936">문자보내기</a></p>
-<a id="kakao-link-btn" href="javascript:sendLink()">
+<a id="create-kakao-link-btn" href="javascript:;">
   <img
     src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
   />
 </a>
 <script type="text/javascript">
-  function sendLink() {
-    Kakao.Link.sendScrap({
-      requestUrl: 'https://kimysub.github.io/wedding.github.io',
-    })
-  }
+  Kakao.Link.createScrapButton({
+    container: '#create-kakao-link-btn',
+    requestUrl: 'https://kimysub.github.io/wedding.github.io',
+  })
 </script>
+
 
                           	</div>
                         </div>
