--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-     	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
      	<meta name="description" content="">
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
 	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
