--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
 	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
       	<title>이슬 &amp; 영섭</title>
+<script>
+document.documentElement.addEventListener('touchstart', function (event) {
+  if (event.touches.length > 1) {
+   event.preventDefault();
+  }
+ }, false);
+</script>
+
 
         <link rel="icon" href="images/favicon.jpg">
         <!-- Bootstrap -->
