--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
        	<!-- MAIN SLIDER -->
-    	<section id="main-slider" class="flexslider fixed-height">
+    	<section id="main-slider" class="flexslider fullscreen">
 
             <!-- MAIN SLIDER TITLE OUTTER WRAPPER -->
         	<div class="slide-title-outter-wrapper">
@@ -122,7 +122,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/Couple.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/wedding_dress.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
