--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   </style>
  </head>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap');*/
 	.SF-font{
 		font-family: 'Sunflower', sans-serif;
 </style>
@@ -163,9 +164,6 @@
                 			<li class="first-child">
                         		<a href="#main-slider">맨 위로</a>
                         	</li>
-													<li>
-	                            	<a href="#our-story">우리 이야기</a>
-	                            </li>
                     		<li class="first-child split-margin">
                             	<a href="#where-when">시간과 장소</a>
                             </li>
@@ -213,7 +211,8 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">김영섭</h2>
+                        		<h2 class="SF-font text-center">김영섭         
+								<p><a href="tel:01034472936">전화걸기</a></p></h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
@@ -256,98 +255,6 @@
                 </div>
             </section>
 
-
-            <!-- OUR STORY SECTION -->
-            <section id="our-story">
-
-                <div class="container">
-
-               	 	<!-- ROW-1 -->
-                	<div class="row">
-
-                        <!-- SECTION TITLE -->
-                    	<div class="col-sm-12 col-md-offset-2 col-md-8 text-center">
-
-                        	<div class="section-title animation fadeInUp">
-                        		<h2>
-                            		우리 <img src="images/heart-icon.png" alt=""> 이야기
-                            	</h2>
-
-                          	</div>
-                        </div>
-                   </div> <!-- END of ROW-1 -->
-
-
-                   <!-- STORY ROW-1-->
-                   <div class="row story-row">
-
-                        <div class="col-sm-12 col-md-offset-1 col-md-4 text-center">
-                            <!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation delay1 fadeInLeft">
-
-                             	<!--PHOTO-->
-                               	<img src="./images/Couple2.jpg" alt="" class="hover-animation image-zoom-in">
-
-                               	<!--PHOTO OVERLAY-->
-                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                            	</div><!--END of PHOTO OVERLAY-->
-
-                                <!--ICON LINK-->
-                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                                    <div class="alignment">
-                                    	<div class="v-align center-middle">
-
-                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '데이트');"  href="./images/Couple2.jpg" class="magnific-zoom" title="데이트">
-        										<div class="de-icon circle light medium-size inline">
-            										<i class="de-icon-zoom-in"></i>
-            									</div>
-        									</a>
-
-                                      	</div>
-                                    </div>
-                                </div><!--END of ICON LINK-->
-
-                            </div><!--END of PHOTO-ITEM-->
-                        </div>
-
-                        <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
-                        	<div class="arrow-left"></div>
-                            <div class="story-date">
-                            	<div class="date-only">09</div>
-                                <div class="month-year">2021</div>
-                           </div>
-                           <div class="arrow-right"></div>
-                           <div class="clearboth"></div>
-                        </div>
-
-                        <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
-                        	<h3>데이트</h3>
-                            <p>이슬</p>
-														<p>영섭</p>
-                        </div>
-
-                        <div class="vertical-line">
-                        </div>
-
-					</div><!-- END of STORY ROW-1 -->
-
-                    <div class="row">
-                    	<div class="col-md-12 text-center">
-                        	<div id="end-of-story" class="animation fadeInUp">
-                        		<h2>그리고 드디어 결혼을 하게 되었습니다.</h2>
-                                <div class="heart-divider">
-                                    	<span class="grey-line"></span>
-                                        <i class="de-icon-heart pink-heart"></i>
-                                        <i class="de-icon-heart grey-heart"></i>
-                                        <span class="grey-line"></span>
-                                    </div>
-                            </div>
-                        </div>
-                    </div>
-
-				</div><!-- END of CONTAINER -->
-
-            </section>
 
             <!-- PHOTO DIVIDER -->
             <section id="photo-divider-1">
