--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
 	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
       	<title>이슬 &amp; 영섭</title>
-        <link rel="icon" href="images/favicon.jpg">
+        <link rel="icon" href="images/heart7.png">
         <!-- Bootstrap -->
     	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
         <!-- Pace -->
@@ -123,7 +123,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/wedding_dress.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/wedding_dress.jpeg); background-position:top center; background-size:contain; background-repeat:no-repeat">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
@@ -212,7 +212,7 @@
 
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">김영섭         
-								<p><a href="tel:01034472936">전화걸기</a></p></h2>
+								<a href="tel:01034472936">전화걸기</a></h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
@@ -430,7 +430,7 @@ map.relayout();
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		우리 <img src="images/heart-icon.png" alt=""> 갤러리
+                            		우리 <img src="images/heart7.png" alt=""> 갤러리
                             	</h2>
 
                           	</div>
